--- a/templates/share.html
+++ b/templates/share.html
@@ -169,15 +169,13 @@
 
 <div class="sideBar" id="sideBar">
     <span class="folderPathFont" style="color: white; margin-top: 40px;">Sechat Drive</span>
-    <button onclick="logout()" class="folderPathFont buttonSideBar"
-            style="margin-top: 40px; background-color: #6752d1; color: white; border: 0; border-radius: 30px; width: 90%; display: flex; justify-content: space-around; align-items: center;">
+    <button onclick="logout()" class="folderPathFont buttonSideBar">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="editMenuSVG" fill="white">
             <path d="M377.9 105.9L500.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L377.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1-128 0c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM160 96L96 96c-17.7 0-32 14.3-32 32l0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-64 0c-53 0-96-43-96-96L0 128C0 75 43 32 96 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32z"/>
         </svg>
         <span class="folderPathFont">Logout</span>
     </button>
-    <button onclick="on_click_trash()" class="folderPathFont buttonSideBar"
-            style="margin-top: 40px; background-color: #6752d1; color: white; border: 0; border-radius: 30px; width: 90%; display: flex; justify-content: space-around; align-items: center;">
+    <button onclick="on_click_trash()" class="folderPathFont buttonSideBar">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="editMenuSVG" fill="white">
             <path d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z"/></svg>
         <span class="folderPathFont">Trash</span>
