--- a/static/styles/drive.css
+++ b/static/styles/drive.css
@@ -217,7 +217,6 @@ body {
 }
 
 .buttonSideBar {
-    margin-top: 40px;
     background-color: #6752d1;
     color: white;
     border: 0;
@@ -226,7 +225,7 @@ body {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 10px;
+    padding: 15px;
 }
 
 .element img {
@@ -372,9 +371,10 @@ body {
 
     .sideBar {
         width: 300px;
+        gap: 10px;
     }
 
     .buttonSideBar {
-        margin-top: 2px;
+        margin-top: 0;
     }
 }
