--- a/templates/drive.html
+++ b/templates/drive.html
@@ -203,7 +203,7 @@
 </div>
 
 <div class="sideBar" id="sideBar">
-    <img src="/static/Logo.png" style="max-width: 10%;">
+    <img src="/static/Logo.png" style="max-width: 25%; margin-top: 20px;">
     <span class="folderPathFont" style="color: white; margin-top: 40px;">Sechat Drive</span>
     <button onclick="logout()" class="folderPathFont buttonSideBar">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="editMenuSVG" fill="white">
