--- a/templates/drive.html
+++ b/templates/drive.html
@@ -98,7 +98,7 @@
                 <span style="max-width: 60%; overflow: hidden; white-space: nowrap">{{element}}</span>
             </div>
             <div class="press-hover editButtonDesktop" onclick="on_click_edit('{{request_folder}}', '{{element}}')"
-                 style="height: 100%; margin-right: 40px; display: flex; justify-content: flex-end; align-items: center;">
+                 style="height: 100%; display: flex; justify-content: flex-end; align-items: center;">
                 <button id="edit_x"
                         style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; background-color: transparent; border: 0;">
                     <svg id="edit_x"
@@ -124,7 +124,7 @@
                 <span style="max-width: 70%; overflow: hidden; white-space: nowrap">{{element}}</span>
             </div>
             <div class="press-hover editButtonDesktop" onclick="on_click_edit('{{request_folder}}', '{{element}}')"
-                 style="height: 100%; margin-right: 40px; display: flex; justify-content: flex-end; align-items: center;">
+                 style="height: 100%; display: flex; justify-content: flex-end; align-items: center;">
                 <button id="edit_x"
                         style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; background-color: transparent; border: 0;">
                     <svg id="edit_x"
