--- a/templates/drive.html
+++ b/templates/drive.html
@@ -98,9 +98,9 @@
                 <span style="max-width: 60%; overflow: hidden; white-space: nowrap">{{element}}</span>
             </div>
             <div class="press-hover editButtonDesktop" onclick="on_click_edit('{{request_folder}}', '{{element}}')"
-                 style="height: 100%; display: flex; justify-content: flex-end; align-items: center;">
+                 style="height: 100%; display: flex; justify-content: flex-end; align-items: center; max-width: 20%;">
                 <button id="edit_x"
-                        style="width: 50%; height: 100%; display: flex; justify-content: center; align-items: center; background-color: transparent; border: 0;">
+                        style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; background-color: transparent; border: 0;">
                     <svg id="edit_x"
                          xmlns="http://www.w3.org/2000/svg" fill="white"
                          class="bi bi-three-dots-vertical editButtonSVG" viewBox="0 0 128 512"
@@ -124,9 +124,9 @@
                 <span style="max-width: 70%; overflow: hidden; white-space: nowrap">{{element}}</span>
             </div>
             <div class="press-hover editButtonDesktop" onclick="on_click_edit('{{request_folder}}', '{{element}}')"
-                 style="height: 100%; display: flex; justify-content: flex-end; align-items: center;">
+                 style="height: 100%; display: flex; justify-content: flex-end; align-items: center; max-width: 20%;">
                 <button id="edit_x"
-                        style="width: 50%; height: 100%; display: flex; justify-content: center; align-items: center; background-color: transparent; border: 0;">
+                        style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; background-color: transparent; border: 0;">
                     <svg id="edit_x"
                          xmlns="http://www.w3.org/2000/svg" fill="white"
                          class="bi bi-three-dots-vertical editButtonSVG" viewBox="0 0 128 512"
