--- a/templates/drive.html
+++ b/templates/drive.html
@@ -24,9 +24,9 @@
     </div>
     {% if not "~trash" in request_folder %}
     <div class="press-hover addButtonDesktop" id="add_button" onclick="on_click_add_button()"
-         style="display: flex; justify-content: flex-end; align-items: center;">
+         style="display: flex; justify-content: flex-end; align-items: center; max-width: 20%;">
         <svg xmlns="http://www.w3.org/2000/svg" fill="white" class="bi bi-plus addButtonSVG"
-             viewBox="0 0 448 512" style="width: 50%; display: flex; justify-content: flex-end; align-items: center;">
+             viewBox="0 0 448 512" style="width: 100%; display: flex; justify-content: flex-end; align-items: center;">
             <path fill-rule="evenodd"
                   d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z"/>
         </svg>
