--- a/templates/share.html
+++ b/templates/share.html
@@ -68,7 +68,7 @@
             <span style="max-width: 60%; overflow: hidden; white-space: nowrap">{{element}}</span>
         </div>
         <div class="press-hover editButtonDesktop" onclick="on_click_edit_share('{{element}}', '{{tokens[loop.index - 1]}}')"
-             style="height: 100%; margin-right: 40px; display: flex; justify-content: flex-end; align-items: center; max-width: 20%;">
+             style="height: 100%; display: flex; justify-content: flex-end; align-items: center; max-width: 20%;">
             <button id="edit_x"
                     style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; background-color: transparent; border: 0;">
                 <svg id="edit_x"
@@ -91,7 +91,7 @@
             <span style="max-width: 70%; overflow: hidden; white-space: nowrap">{{element}}</span>
         </div>
         <div class="press-hover editButtonDesktop" onclick="on_click_edit_share('{{element}}', '{{tokens[loop.index-1]}}')"
-             style="height: 100%; margin-right: 40px; display: flex; justify-content: flex-end; align-items: center; max-width: 20%;">
+             style="height: 100%; display: flex; justify-content: flex-end; align-items: center; max-width: 20%;">
             <button id="edit_x"
                     style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; background-color: transparent; border: 0;">
                 <svg id="edit_x"
