--- a/static/styles/drive.css
+++ b/static/styles/drive.css
@@ -111,6 +111,7 @@ body {
     flex-direction: column;
     justify-content: space-around;
     align-items: flex-start;
+    padding-bottom: 20px;
 }
 
 .editMenu {
@@ -129,6 +130,7 @@ body {
     -webkit-transition: all .5s ease;
     -moz-transition: all .5s ease;
     transition: all .5s ease;
+    padding-bottom: 20px;
 }
 
 .editMenu2 {
