--- a/static/styles/drive.css
+++ b/static/styles/drive.css
@@ -29,6 +29,7 @@ body {
     display: flex;
     justify-content: space-around;
     align-items: flex-start;
+    padding-top: 10px;
     border-top: 1px solid #8992B0;
 }
 
