--- a/static/styles/drive.css
+++ b/static/styles/drive.css
@@ -28,7 +28,7 @@ body {
     background-color: #1b1a22;
     display: flex;
     justify-content: space-around;
-    align-items: flex-start;
+    align-items: center;
     padding-top: 10px;
     border-top: 1px solid #8992B0;
 }
