--- a/templates/drive.html
+++ b/templates/drive.html
@@ -24,7 +24,7 @@
     </div>
     {% if not "~trash" in request_folder %}
     <div class="press-hover addButtonDesktop" id="add_button" onclick="on_click_add_button()"
-         style="display: flex; justify-content: flex-end; align-items: center; max-width: 20%; min-width: 20%;">
+         style="display: flex; justify-content: flex-end; align-items: center; ">
         <svg xmlns="http://www.w3.org/2000/svg" fill="white" class="bi bi-plus addButtonSVG"
              viewBox="0 0 448 512" style="width: 100%; display: flex; justify-content: flex-end; align-items: center;">
             <path fill-rule="evenodd"
